--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="header">
-        <div class="logo">Header Logo</div>
-        <ul class="links">
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-        </ul>
+    <div class="dark-bg-color">
+        <div class="header">
+            <div class="logo">Header Logo</div>
+            <ul class="links">
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
