--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="dark-bg-color">
+    <div class="section dark-bg-color">
         <div class="header">
             <div class="logo">Header Logo</div>
             <ul class="links">
