--- a/index.html
+++ b/index.html
@@ -9,11 +9,21 @@
     <div class="section dark-bg-color">
         <div class="header">
             <div class="logo">Header Logo</div>
-            <ul class="links">
+            <ul class="links secondary-text">
                 <li>header link one</li>
                 <li>header link two</li>
                 <li>header link three</li>
             </ul>
+        </div>
+        <div class="hero">
+            <div class="left-hero">
+                <div class="main-text">This website is awesome</div>
+                <div class="secondary-text">This website has some subtext that goes here under the main title. 
+                    It's a smaller font and the color is lower contrast
+                </div>
+                <button>Sign up</button>
+            </div>
+            <div class="img">Placeholder for image</div>
         </div>
     </div>
 </body>
