Add info section details

--- a/index.html
+++ b/index.html
@@ -26,5 +26,32 @@
             <div class="img">Placeholder for image</div>
         </div>
     </div>
+    <div class="section">
+        <div class="info">
+            <div class="header">Some random information</div>
+            <div class="card-container">
+                <div class="card">
+                    <div class="card-img"></div>
+                    <div class="card-text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="card">
+                    <div class="card-img"></div>
+                    <div class="card-text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="card">
+                    <div class="card-img"></div>
+                    <div class="card-text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="card">
+                    <div class="card-img"></div>
+                    <div class="card-text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="card">
+                    <div class="card-img"></div>
+                    <div class="card-text">this is some subtext under an illustration or image</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
