Transfer section class

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="section dark-bg-color">
-        <div class="header">
+    <div class="dark-bg-color">
+        <div class="section header">
             <div class="logo">Header Logo</div>
             <ul class="links secondary-text">
                 <li>header link one</li>
@@ -15,7 +15,7 @@
                 <li>header link three</li>
             </ul>
         </div>
-        <div class="hero">
+        <div class="section hero">
             <div class="left-hero">
                 <div class="main-text">This website is awesome</div>
                 <div class="secondary-text">This website has some subtext that goes here under the main title. 
@@ -26,8 +26,8 @@
             <div class="img">Placeholder for image</div>
         </div>
     </div>
-    <div class="section">
-        <div class="info">
+    <div class="white-bg-color">
+        <div class="section info">
             <div class="header">Some random information</div>
             <div class="card-container">
                 <div class="card">
