--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="white-bg-color">
         <div class="section info">
-            <div class="header">Some random information</div>
+            <div class="info-header-text">Some random information</div>
             <div class="card-container">
                 <div class="card">
                     <div class="card-img"></div>
