--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="dark-bg-color">
         <div class="section header">
-            <div class="logo">Header Logo</div>
+            <div class="logo header-text">Header Logo</div>
             <ul class="links secondary-text">
                 <li>header link one</li>
                 <li>header link two</li>
@@ -55,6 +55,17 @@
                 Maybe it's just filling up space, or maybe people will actually read it. Who knows? 
                 All I know is that it looks nice. </div>
             <div class="quote-author">- Thor, God of Thunder</div>
+        </div>
+    </div>
+    <div class="white-bg-color">
+        <div class="section cta-container">
+            <div class="cta">
+                <div class="cta-text">
+                    <div class="header-text">Call to action! It's time!</div>
+                    <div class="secondary-text">Sign up for our product by clicking the button right over there!</div>
+                </div>
+                <button>Sign up</button>
+            </div>
         </div>
     </div>
 </body>
