Add footer section details

--- a/index.html
+++ b/index.html
@@ -68,5 +68,8 @@
             </div>
         </div>
     </div>
+    <div class="dark-bg-color">
+        <div class="section footer secondary-text">Copyright © Liam Iñaki Gillamac</div>
+    </div>
 </body>
 </html>
