--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="dark-bg-color">
+    <div class="bg dark-color">
         <div class="section header">
             <div class="logo header-text">Header Logo</div>
             <ul class="links secondary-text">
@@ -26,7 +26,7 @@
             <div class="img">Placeholder for image</div>
         </div>
     </div>
-    <div class="white-bg-color">
+    <div class="bg white-color">
         <div class="section info">
             <div class="info-header-text">Some random information</div>
             <div class="card-container">
@@ -49,7 +49,7 @@
             </div>
         </div>
     </div>
-    <div class="gray-bg-color">
+    <div class="bg gray-color">
         <div class="section quote">
             <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. 
                 Maybe it's just filling up space, or maybe people will actually read it. Who knows? 
@@ -57,7 +57,7 @@
             <div class="quote-author">- Thor, God of Thunder</div>
         </div>
     </div>
-    <div class="white-bg-color">
+    <div class="bg white-color">
         <div class="section cta-container">
             <div class="cta">
                 <div class="cta-text">
@@ -68,7 +68,7 @@
             </div>
         </div>
     </div>
-    <div class="dark-bg-color">
+    <div class="bg dark-color">
         <div class="section footer secondary-text">Copyright © Liam Iñaki Gillamac</div>
     </div>
 </body>
