--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
                 <li>header link three</li>
             </ul>
         </div>
+    </div>
+    <div class="bg dark-color">
         <div class="section hero">
             <div class="left-hero">
                 <div class="main-text">This website is awesome</div>
