Add icon and logo

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="./img/logo.png">
     <link rel="stylesheet" href="style.css">
     <title>Landing Page</title>
 </head>
 <body>
     <div class="bg dark-color">
         <div class="section header">
-            <div class="logo header-text">Header Logo</div>
+            <img class="logo" src="./img/logo.png" alt="Logo">
             <ul class="links secondary-text">
                 <li>header link one</li>
                 <li>header link two</li>
