--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <div class="bg dark-color">
         <div class="section header">
-            <img class="logo" src="./img/logo.png" alt="Logo">
+            <a href="#"><img class="logo" src="./img/logo.png" alt="Logo"></a>
             <ul class="links secondary-text">
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Elements</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </div>
     </div>
