Add image in hero

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <button>Sign up</button>
             </div>
-            <div class="img">Placeholder for image</div>
+            <div class="img"><img src="./img/hero.jpeg"></div>
         </div>
     </div>
     <div class="bg white-color">
