--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <div class="bg dark-color">
         <div class="section hero">
             <div class="left-hero">
-                <div class="main-text">This website is awesome</div>
-                <div class="secondary-text">This website has some subtext that goes here under the main title. 
-                    It's a smaller font and the color is lower contrast
+                <div class="main-text">Say hello to Catavatars</div>
+                <div class="secondary-text">Don't miss the chance to make your cats the next Catavatar 
+                    that will save the world.
                 </div>
                 <button>Sign up</button>
             </div>
