--- a/index.html
+++ b/index.html
@@ -26,28 +26,28 @@
                 </div>
                 <button>Sign up</button>
             </div>
-            <div class="img"><img src="./img/hero.jpeg"></div>
+            <div class="img"><img src="./img/hero.jpeg" alt="Cats walking like superheroes."></div>
         </div>
     </div>
     <div class="bg white-color">
         <div class="section info">
-            <div class="info-header-text">Some random information</div>
+            <div class="info-header-text">Catavatar in their Element</div>
             <div class="card-container">
                 <div class="card">
-                    <div class="card-img"></div>
-                    <div class="card-text">this is some subtext under an illustration or image</div>
+                    <div class="card-img"><img src="./img/water.jpeg" alt="Cat water-bending"></div>
+                    <div class="card-text">Water</div>
                 </div>
                 <div class="card">
-                    <div class="card-img"></div>
-                    <div class="card-text">this is some subtext under an illustration or image</div>
+                    <div class="card-img"><img src="./img/earth.png" alt="Cat earth-bending"></div>
+                    <div class="card-text">Earth</div>
                 </div>
                 <div class="card">
-                    <div class="card-img"></div>
-                    <div class="card-text">this is some subtext under an illustration or image</div>
+                    <div class="card-img"><img src="./img/fire.jpeg" alt="Cat fire-bending"></div>
+                    <div class="card-text">Fire</div>
                 </div>
                 <div class="card">
-                    <div class="card-img"></div>
-                    <div class="card-text">this is some subtext under an illustration or image</div>
+                    <div class="card-img"><img src="./img/air.jpeg" alt="Cat air-bending"></div>
+                    <div class="card-text">Air</div>
                 </div>
             </div>
         </div>
