--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     <div class="bg white-color">
         <div class="section info">
-            <div class="info-header-text">Catavatar in their Element</div>
+            <div class="info-header-text">Catavatars in their Element</div>
             <div class="card-container">
                 <div class="card">
                     <div class="card-img"><img src="./img/water.jpeg" alt="Cat water-bending"></div>
