--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
     </div>
     <div class="bg gray-color">
         <div class="section quote">
-            <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. 
-                Maybe it's just filling up space, or maybe people will actually read it. Who knows? 
-                All I know is that it looks nice. </div>
-            <div class="quote-author">- Thor, God of Thunder</div>
+            <div class="quote-text">"Meow meow meoOOoow meoow meow meow. Meow MeooOOoow Meeow Meowww. 
+                Meooow meOOoOw meOOOOOOOOW meoww!!!" </div>
+            <div class="quote-author">- Caang, The Last Airbender</div>
         </div>
     </div>
     <div class="bg white-color">
