Remove card-img class

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
             <div class="info-header-text">Catavatars in their Element</div>
             <div class="card-container">
                 <div class="card">
-                    <div class="card-img"><img src="./img/water.jpeg" alt="Cat water-bending"></div>
+                    <img src="./img/water.jpeg" alt="Cat water-bending">
                     <div class="card-text">Water</div>
                 </div>
                 <div class="card">
-                    <div class="card-img"><img src="./img/earth.png" alt="Cat earth-bending"></div>
+                    <img src="./img/earth.png" alt="Cat earth-bending">
                     <div class="card-text">Earth</div>
                 </div>
                 <div class="card">
-                    <div class="card-img"><img src="./img/fire.jpeg" alt="Cat fire-bending"></div>
+                    <img src="./img/fire.jpeg" alt="Cat fire-bending">
                     <div class="card-text">Fire</div>
                 </div>
                 <div class="card">
-                    <div class="card-img"><img src="./img/air.jpeg" alt="Cat air-bending"></div>
+                    <img src="./img/air.jpeg" alt="Cat air-bending">
                     <div class="card-text">Air</div>
                 </div>
             </div>
