Edit text in call-to-action section

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <div class="section cta-container">
             <div class="cta">
                 <div class="cta-text">
-                    <div class="header-text">Call to action! It's time!</div>
-                    <div class="secondary-text">Sign up for our product by clicking the button right over there!</div>
+                    <div class="header-text">Make your cat the next Catavar!</div>
+                    <div class="secondary-text">Sign up now so you won't miss the chance.</div>
                 </div>
                 <button>Sign up</button>
             </div>
